Fixed overflow in mobile

--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -6,6 +6,7 @@ body {
   max-width: 1000px;
   margin: auto;
   min-height: 1000px;
+  overflow-x: hidden;
 }
 
 .input-wrapper {
